src/objects/OrgChartPlus__ADP_OrgChart__c.object
<CustomObject>
    <fields>
        <fullName>OrgChartPlus__Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>ADP OrgCharts</relationshipLabel>
        <relationshipName>OrgChart</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>OrgChartPlus__AutomaticChart__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Automatic Chart</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrgChartPlus__ImportFilter__c</fullName>
        <label>Import Filter</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OrgChartPlus__Version__c</fullName>
        <label>Version</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>ADP OrgChart</label>
    <nameField>
        <label>OrgChart Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ADP OrgCharts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>